log
Thu 28 Sep 2023 06:44:34 PM UTC: 
 tests:  0|4
total_score: 0/70
6b79366
Thu 28 Sep 2023 06:50:48 PM UTC: 
 heap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:42:11: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   42 |     heap->capacity = 3;  // Capacidad inicial de 3 casillas
      |           ^~~~~~~~
      |           capac
heap.c:44:66: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   44 |     heap->heapArray = (heapElem*)malloc(sizeof(heapElem) * heap->capacity);
      |                                                                  ^~~~~~~~
      |                                                                  capac
Compilation failed
44cc6ec
Thu 28 Sep 2023 06:51:06 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:44:66: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   44 |     heap->heapArray = (heapElem*)malloc(sizeof(heapElem) * heap->capacity);
      |                                                                  ^~~~~~~~
      |                                                                  capac
Compilation failed
4c4d5c4
Thu 28 Sep 2023 06:51:18 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
236923c
Thu 28 Sep 2023 06:52:10 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|3
total_score: 10/70
9e652bd
Thu 28 Sep 2023 06:56:36 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:26:1: error: control reaches end of non-void function [-Werror=return-type]
   26 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2153f4f
Thu 28 Sep 2023 06:57:09 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
617ca0c
Thu 28 Sep 2023 07:06:52 PM UTC: 
 heap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d5b7ccb
Thu 28 Sep 2023 07:07:28 PM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  3|2
total_score: 25/70
58ab053
Thu 28 Sep 2023 07:11:52 PM UTC: 
 heap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  2|2
total_score: 20/70
b8bb689
Thu 28 Sep 2023 07:12:33 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a9f1268
Thu 28 Sep 2023 07:12:53 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|2
total_score: 25/70
6c213c7
Thu 28 Sep 2023 07:13:20 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
49d1357
Thu 28 Sep 2023 07:18:09 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|2
total_score: 20/70
60a9bef
Thu 28 Sep 2023 07:21:44 PM UTC: 
 heap.c | 16 +---------------
 1 file changed, 1 insertion(+), 15 deletions(-)
 tests:  3|2
total_score: 25/70
83fc825
Thu 28 Sep 2023 07:27:03 PM UTC: 
 heap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  2|2
total_score: 20/70
ec63ea4
Thu 28 Sep 2023 07:27:12 PM UTC: 
 heap.c | 11 -----------
 1 file changed, 11 deletions(-)
 tests:  3|2
total_score: 25/70
66167e6
Sun 15 Oct 2023 11:27:32 PM UTC: 
 heap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:50:39: error: invalid operands to binary / (have ‘char * (*)(const char *, int)’ and ‘int’)
   50 |         int parentIndex = (index - 1) / 2;
      |                           ~~~~~~~~~~~ ^
      |                                  |
      |                                  char * (*)(const char *, int)
heap.c:51:26: error: array subscript is not an integer
   51 |         if (pq->heapArray[index].priority > pq->heapArray[parentIndex].priority) {
      |                          ^
heap.c:53:42: error: array subscript is not an integer
   53 |             heapElem temp = pq->heapArray[index];
      |                                          ^
heap.c:54:26: error: array subscript is not an integer
   54 |             pq->heapArray[index] = pq->heapArray[parentIndex];
      |                          ^
heap.c:56:19: error: lvalue required as left operand of assignment
   56 |             index = parentIndex;
      |                   ^
Compilation failed
10dc345
Sun 15 Oct 2023 11:29:53 PM UTC: 
 heap.c | 36 +++++++++++++++++++++++++++++++++++-
 1 file changed, 35 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
33fc240
Sun 15 Oct 2023 11:33:08 PM UTC: 
 heap.c | 38 +-------------------------------------
 1 file changed, 1 insertion(+), 37 deletions(-)
 tests:  7|1
total_score: 45/70
2d27e90
